force-app/main/default/objects/SPD__c/SPD__c.object-meta.xml
<CustomObject>
    <description>We created this object for new SPD workflow.</description>
    <label>SPD</label>
    <nameField>
        <displayFormat>SPD# {00000000}</displayFormat>
        <label>SPD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>