force-app/main/default/objects/SPD__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <formula>IF(
    ISBLANK(Owner:User.FirstName) &amp;&amp; ISBLANK(Owner:User.LastName),
    Owner:Queue.Name,
    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
    <label>Assigned Rep</label>
    <type>Text</type>
</CustomField>