force-app/main/default/objects/SPD__c/fields/Current_Group_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Group_Policy_Number__c</fullName>
    <label>Current Group Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>