force-app/main/default/objects/SPD__c/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email and Call</fullName>
            </value>
            <value>
                <fullName>Email and Call 2nd Attempt</fullName>
            </value>
            <value>
                <fullName>Email and Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>