force-app/main/default/objects/SPD__c/fields/Follows_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follows_Up_Date__c</fullName>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>