force-app/main/default/objects/SPD__c/fields/Insurance_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Member_Id__c</fullName>
    <label>Insurance Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>