force-app/main/default/objects/SPD__c/fields/Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Phone_Number__c</fullName>
    <label>Insurance Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>