force-app/main/default/objects/SPD__c/fields/Last_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Acquisition_Date__c</fullName>
    <label>Last Acquisition Date</label>
    <type>DateTime</type>
</CustomField>