force-app/main/default/objects/SPD__c/fields/Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance__c</fullName>
    <label>Primary Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>