force-app/main/default/objects/SPD__c/fields/Primary_Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Phone_Number__c</fullName>
    <label>Primary Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>