force-app/main/default/objects/SPD__c/fields/Related_to_VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_to_VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SPDs</relationshipLabel>
    <relationshipName>SPDs</relationshipName>
    <type>Lookup</type>
</CustomField>