force-app/main/default/objects/SPD__c/fields/Source_of_SPD_for_Group_Policy__c.field-meta.xml
<CustomField>
    <fullName>Source_of_SPD_for_Group_Policy__c</fullName>
    <label>Source of SPD for Group Policy?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>