force-app/main/default/objects/SPD__c/fields/SPD_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>SPD_Acquisition_Date__c</fullName>
    <label>SPD Acquisition Date</label>
    <type>Date</type>
</CustomField>