force-app/main/default/objects/SPD__c/fields/SPD_Acquisition_Source_c__c.field-meta.xml
<CustomField>
    <fullName>SPD_Acquisition_Source_c__c</fullName>
    <description>Required field for SPD specialist to mark SPD as Active</description>
    <label>For future reference, where did you acqu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>