force-app/main/default/objects/SPD__c/fields/SPD_Not_Applicable_to_GPN__c.field-meta.xml
<CustomField>
    <fullName>SPD_Not_Applicable_to_GPN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPD Not Applicable to GPN</label>
    <type>Checkbox</type>
</CustomField>