force-app/main/default/objects/SPD__c/fields/VOB_Specialist__c.field-meta.xml
<CustomField>
    <fullName>VOB_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOB Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPDs</relationshipName>
    <type>Lookup</type>
</CustomField>