force-app/main/default/objects/SPD__c/fields/VOB_Subject__c.field-meta.xml
<CustomField>
    <fullName>VOB_Subject__c</fullName>
    <label>VOB Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>