force-app/main/default/objects/SPD__c/fields/VOB_Type__c.field-meta.xml
<CustomField>
    <fullName>VOB_Type__c</fullName>
    <label>VOB Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>