force-app/main/default/objects/SPD__c/fields/Where_to_obtain_SPD__c.field-meta.xml
<CustomField>
    <fullName>Where_to_obtain_SPD__c</fullName>
    <label>Where to obtain SPD?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>