force-app/main/default/objects/SPD__c/fields/X6_Months__c.field-meta.xml
<CustomField>
    <fullName>X6_Months__c</fullName>
    <formula>ADDMONTHS( SPD_Acquisition_Date__c , 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPD Expiration Date</label>
    <type>Date</type>
</CustomField>