force-app/main/default/objects/SPD__c/validationRules/For_Active_checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Active_checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status__c ,&apos;Active&apos;),
    ISBLANK(Source_of_SPD_for_Group_Policy__c)
)</errorConditionFormula>
    <errorDisplayField>Source_of_SPD_for_Group_Policy__c</errorDisplayField>
    <errorMessage>Please provide the Source of SPD for Group Policy when the SPD is marked as active.</errorMessage>
</ValidationRule>