force-app/main/default/objects/SPD__c/listViews/Active_SPD.listView-meta.xml
<ListView>
    <fullName>Active_SPD</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>X6_Months__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active SPDs</label>
</ListView>