force-app/main/default/objects/SPD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Follow_Up_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SPD&apos;s</label>
</ListView>