force-app/main/default/objects/SPD__c/listViews/Expired_SPDs.listView-meta.xml
<ListView>
    <fullName>Expired_SPDs</fullName>
    <columns>NAME</columns>
    <columns>Current_Group_Policy_Number__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>SPD_Acquisition_Date__c</columns>
    <columns>X6_Months__c</columns>
    <columns>Assigned_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired SPDs</label>
</ListView>