force-app/main/default/objects/SPD__c/listViews/My_Active_SPDs.listView-meta.xml
<ListView>
    <fullName>My_Active_SPDs</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active SPD&apos;s</label>
</ListView>