force-app/main/default/objects/SPD__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>Current_Group_Policy_Number__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Where_to_obtain_SPD__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>New/Pending SPDs</label>
</ListView>