force-app/main/default/objects/SPD__c/listViews/SPD_Owner.listView-meta.xml
<ListView>
    <fullName>SPD_Owner</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My SPD Cases</label>
</ListView>