force-app/main/default/objects/SPD__c/listViews/SPD_Queue_SPD.listView-meta.xml
<ListView>
    <fullName>SPD_Queue_SPD</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Primary_Insurance_Phone_Number__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>SPD Queue</label>
    <queue>SPD_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>