force-app/main/default/objects/SPD__c/listViews/Working_SPDs.listView-meta.xml
<ListView>
    <fullName>Working_SPDs</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Current_Group_Policy_Number__c</columns>
    <columns>Primary_Insurance__c</columns>
    <columns>Insurance_Phone_Number__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Where_to_obtain_SPD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Working</value>
    </filters>
    <label>Working SPDs</label>
</ListView>